--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -595,6 +595,49 @@
         }
 
 
+
+
+        
+        @media screen and (max-width:800px){
+            .nav-1{  display: none;}
+        }
+
+        @media screen and  (max-width:800px) {
+          .btn-nav { display:none; }
+        }
+
+
+        @media screen and  (max-width:800px) {
+          .nav-bar { text-align: center;  }
+        }
+
+        @media screen and  (max-width:800px) {
+          .txt-objective { line-height: normal;  }
+        }
+
+        @media screen and  (max-width:800px) {
+          .aboutme-text { display: block;  }
+        }
+
+        @media screen and  (max-width:800px) {
+          .txt-ab { text-align: center; 
+          margin-bottom: 10px; }
+        }
+
+        @media screen and  (max-width:800px) {
+          .pro-detail { width: 80%; }
+        }
+
+        @media screen and  (max-width:800px) {
+          .contact-me { height: 190px; }
+        }
+
+
+
+
+
+        
+
     </style>
 
 
