--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -902,7 +902,7 @@
 
 
     <div class="contact-me">
-      <p class="feel-free"> Fell free to contact me </p>
+      <p class="feel-free"> Feel free to contact me </p>
       <p class="email"> <i class="fa-regular fa-envelope"></i> Email:- Shamaparveen5297@gmail.com </p>
       <p class="number"> <i class="fa-solid fa-phone"></i> Phone no:- +91-7982971608</p>
       <p class="location"> <i class="fa-solid fa-location-dot"></i>  location:-  India (DELHI)</p>
