--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -873,8 +873,8 @@
         <div class="pro-dis">
           <div class="pro-discription">
 
-            I am exicted to share with you 2D design of bird. 
-            which is create this bird using html and css only
+            I am exicted to share with you 2D design of Flamingo bird. 
+            which is create this bird using html and css only.
           </div>
 
           <div class="double-btn">
