--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -6,12 +6,18 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Oswald:wght@200..700&family=Playwrite+DE+Grund:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    
 
 
     <style>
        *{
         margin: 0;
         padding: 0;
+         font-family: "Playwrite DE Grund", cursive;
        }
 
        /* body{
@@ -158,7 +164,7 @@
 /* -----------------------------------------------HOME-PAGE--------------------------------------------------------------- */
 
    .txt-homepage{
-    line-height: 60px;
+    line-height: 80px;
    }
 
    /* .homepage{
@@ -215,6 +221,9 @@
     text-align: center;
     font-size: 70px;
     color: rgb(164, 39, 39);
+    font-family: "Oswald", "Roboto Condensed", "Gowun Batang", serif ;
+    font-optical-sizing: auto;
+
     /* margin: 5px 0px 0px 0px; */
     /* margin: 5px 0; */
    }
