--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -568,7 +568,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    font-size: 25px;
+    font-size: 19px;
     padding: 10px;
     background:  rgb(83, 81, 81);
     height: 120px;
@@ -583,7 +583,7 @@
     font-size: 30px;
    }
 
-   .email:hover{
+/*    .email:hover{
     color: black;
     font-size: 28px;
    }
@@ -597,7 +597,7 @@
     color: black;
     font-size: 28px;
    }
-
+ */
 
    @media screen and (max-width:800px){
             .box-edu{  margin-top: 40px;}
