--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -346,7 +346,7 @@
       border: 2px black solid;
       border-radius: 50%;
       padding: 4px;
-      background-color: transparent;
+      background-color: #4ca1af;
     }
 
     .box-edu {
@@ -364,7 +364,7 @@
       border: 2px black solid;
       border-radius: 50%;
       padding: 4px;
-      background-color: transparent;
+      background-color: #4ca1af;
     }
 
 
@@ -897,7 +897,7 @@
               <p class="about"> About me </p>
             </div>
 
-            <div class="two-box">
+            <div class="two-box" data-aos="fade-right">
               <div class="box-exp">
                 <p class="box-logo"> <i class="fa-solid fa-award"></i> </p>
                 <p class="exp-txt"> Experience </p>
@@ -909,7 +909,7 @@
               </div>
 
 
-              <div class="box-edu">
+              <div class="box-edu" data-aos="fade-left">
                 <p class="box-logo"> <i class="fa-solid fa-graduation-cap"></i> </p>
                 <p class="edu-txt"> Education </p>
                 <p class="edu-discription">
