--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -952,7 +952,7 @@
     </div>
 
 
-    <div class="skills-box">
+    <div class="skills-box" data-aos="fade-left" >
 
       <ul class="skills-carousel">
         <li class="skills-card">
@@ -1080,7 +1080,7 @@
 
     <div class="project-main">
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-09-14 154031.png" alt="" width="100%"></p>
         </div>
@@ -1114,7 +1114,7 @@
       <!-- ----------------------------------------------------AC REPAIR --------------------------------------------- -->
 
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-10-12 113611.png" alt="" width="100%"></p>
         </div>
@@ -1152,7 +1152,7 @@
       <!-- ----------------------------------------------------Gingle-clone --------------------------------------------- -->
 
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in">
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-09-14 160123.png" alt="" width="100%"></p>
         </div>
@@ -1185,7 +1185,7 @@
       <!-- ------------------------------------------Amazon-clone------------------------------------------- -->
 
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-09-14 160732.png" alt="" width="100%"></p>
         </div>
@@ -1216,7 +1216,7 @@
 
       <!-- -----------------------------------------------------happyshopp ------------------------------------- -->
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-09-14 160049.png" alt="" width="100%"></p>
         </div>
@@ -1256,7 +1256,7 @@
 
       <!-- ---------------------------------------------------BIRD.1 --------------------------------------------------------- -->
 
-      <div class="pro-detail">
+      <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
           <p class="imgg"><img src="Screenshot 2024-09-13 215602.png" alt="" width="100%" height="300px"></p>
         </div>
