--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -909,7 +909,7 @@
               </div>
 
 
-              <div class="box-edu" data-aos="fade-left">
+              <div class="box-edu" data-aos="fade-right">
                 <p class="box-logo"> <i class="fa-solid fa-graduation-cap"></i> </p>
                 <p class="edu-txt"> Education </p>
                 <p class="edu-discription">
