--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -776,7 +776,7 @@
     @media screen and (max-width:800px) {
       .contact-me {
         height: 190px;
-        width: 100px;
+/*         width: 100px; */
         font-size: 10px;
       }
     }
