--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -809,28 +809,31 @@
 
 
   <!-- ------------------------------------------------PREloader-------------------------------------------------------------- -->
+ <div id="preloader" class="iframe">
 
-  <div id="preloader" class="iframe">
+    <img
+      src="https://media1.tenor.com/m/BtC0jVjzYToAAAAC/loading-chain.gif"
+      alt="preloader" width="24%">
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yf5d_Zx3AaI?si=CzlJ9OYtoxI41pqo"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  
- 
- 
 
 
-</div>
+
+  </div>
+
 
   <!-- ---------------------------------------------------NAVBARR-------------------------------------------------- -->
 
