--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -1271,7 +1271,7 @@
 
 
   <div class="contact-me">
-    <p class="feel-free"> Fell free to contact me </p>
+    <p class="feel-free"> Feel free to contact me </p>
     <p class="email"> <i class="fa-regular fa-envelope"></i> <a href="mailto:shamaparveen5297@gmail.com"> Email:-
         Shamaparveen5297@gmail.com </a> </p>
     <p class="number"> <i class="fa-solid fa-phone"></i> <a href="tel:7982971608"> Phone no:- +91-7982971608 </a></p>
