--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -922,7 +922,7 @@
                 <p class="exp-discription">
                   Intern <br>
                   During internship I learned a lot of new things <br>
-                  I worked in Namrata Universal as a web devloper.
+                  I worked in Success sign as a web designer.
                 </p>
               </div>
 
@@ -1196,7 +1196,7 @@
         <div class="pro-dis">
           <div class="pro-discription">
 
-            As the developer of the Happyshop Shopping website, I Html and css to create a robust
+            As the developer of the Timefar website, I Html and css to create a robust
             and dynamic e-commerce platform. The site offers an intuitive shopping experience
             with clear navigation, detailed product descriptions, and a seamless checkout process.
             My focus on responsive design ensures optimal performance on all devices, enhancing
@@ -1211,7 +1211,7 @@
             </div>
             <div class="demo-btn">
 
-              <a target="_blank" href="https://shama556.github.io/happyshopp/e-commerce%20-%20Copy.html"> Live demo <i
+              <a target="_blank" href="https://www.timefar.com/"> Live demo <i
                   class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
             </div>
