--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -1190,17 +1190,16 @@
 
       <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
-          <p class="imgg"><img src="Screenshot 2024-09-14 160049.png" alt="" width="100%"></p>
+          <p class="imgg"><img src="Screenshot 2024-12-28 165317.png" alt="" width="100%"></p>
         </div>
 
         <div class="pro-dis">
           <div class="pro-discription">
-
-            As the developer of the Timefar website, I Html and css to create a robust
-            and dynamic e-commerce platform. The site offers an intuitive shopping experience
-            with clear navigation, detailed product descriptions, and a seamless checkout process.
-            My focus on responsive design ensures optimal performance on all devices, enhancing
-            user engagement and satisfaction.
+            This website was designed by me as a developer for a customer using HTML, CSS, and JavaScript.
+            This website provides clients with services related to app development, digital marketing,
+            and website creation.
+            My concentrated effort on responsive design guarantees top performance across 
+            all platforms, increasing user happiness and engagement.
           </div>
 
           <div class="double-btn">
