--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -1126,26 +1126,25 @@
 
       <div class="pro-detail" data-aos="zoom-in">
         <div class="pro-img">
-          <p class="imgg"><img src="Screenshot 2024-09-14 160123.png" alt="" width="100%"></p>
+          <p class="imgg"><img src="Screenshot 2024-12-28 173353.png" alt="" width="100%"></p>
         </div>
 
         <div class="pro-dis">
           <div class="pro-discription">
-            I specialize in developing dynamic and user-centric web solutions using HTML and CSS.
-            The platform offers comprehensive travel services, including flights, tours, and
-            hotel bookings, with a focus on providing the best price deals. My work ensures
-            seamless navigation, engaging visuals, facilitating
-            easy access to popular domestic and international travel destinations.
+            This website was designed by me as a developer for a customer using HTML, CSS, and JavaScript.
+            This website provides clients with services related to website design and also a development {Frontend with Backend}.
+            My concentrated effort on responsive design guarantees top performance across 
+            all platforms, increasing user happiness and engagement.
           </div>
 
           <div class="double-btn">
             <div class="github-btn">
-              <a target="_blank" href="https://github.com/Shama556/Gingle-clone"> Github <i
+              <a target="_blank" href="https://github.com/Shama556/firstpointcreation"> Github <i
                   class="fa-brands fa-github-alt"></i></a>
             </div>
             <div class="demo-btn">
 
-              <a target="_blank" href="https://shama556.github.io/Gingle-clone/Untitled-2.html"> Live demo <i
+              <a target="_blank" href="https://shama556.github.io/firstpointcreation/New-design-first-point.html"> Live demo <i
                   class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
@@ -1205,7 +1204,7 @@
           <div class="double-btn">
             <div class="github-btn">
 
-              <a target="_blank" href="https://github.com/Shama556/happyshopp "> Github <i
+              <a target="_blank" href="https://github.com/Shama556/timefar "> Github <i
                   class="fa-brands fa-github-alt"></i></a>
             </div>
             <div class="demo-btn">
