--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -1121,7 +1121,7 @@
 
 
 
-      <!-- ----------------------------------------------------Gingle-clone --------------------------------------------- -->
+      <!-- ---------------------------------------------------- First point Creation --------------------------------------------- -->
 
 
       <div class="pro-detail" data-aos="zoom-in">
@@ -1185,7 +1185,7 @@
 
 
 
-      <!-- -----------------------------------------------------happyshopp ------------------------------------- -->
+      <!-- ----------------------------------------------------- Timefar ------------------------------------- -->
 
       <div class="pro-detail" data-aos="zoom-in" >
         <div class="pro-img">
