--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -858,10 +858,10 @@
     <nav>
       <ul>
         <li class="name"> Shama.Dev </li>
-        <li class="nav-1"> Home </li>
-        <li class="nav-1"> About me </li>
-        <li class="nav-1"> Projects </li>
-        <li class="btn-nav"> Contact </li>
+        <li class="nav-1" > <a href="./homee">Home </a> </li>
+        <li class="nav-1" > <a href="./aboutme">About me</a>  </li>
+        <li class="nav-1" > <a href="projects">Projects</a>  </li>
+        <li class="btn-nav" > <a href="contact">Contact</a>  </li>
 
 
 
@@ -874,7 +874,7 @@
 
   <!-- ------------------------------------------------------------------------------------------------------------ -->
 
-  <div class="homepage">
+  <div class="homepage" id="homee">
 
     <div class="image-1">
       <img src="Snapchat-460317394.jpg" alt="" height="480px" width="400px" class="image">
@@ -904,7 +904,7 @@
   <!-- ---------------------------------------------------------------------------------------------------------------- -->
 
 
-  <section>
+  <section id="aboutme">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -1042,7 +1042,7 @@
   <!-- --------------------------------------------------------------------------------------------------------- -->
 
 
-  <div class="project">
+  <div class="project" id="project">
 
     <div class="pro-heading">
       <p class="pro-head"> Notable Project </p>
@@ -1268,7 +1268,7 @@
   <!-- ------------------------------------------------CONTACT ME---------------------------------------------------- -->
 
 
-  <div class="contact-me">
+  <div class="contact-me" id="contact">
     <p class="feel-free"> Feel free to contact me </p>
     <p class="email"> <i class="fa-regular fa-envelope"></i> <a href="mailto:shamaparveen5297@gmail.com"> Email:-
         Shamaparveen5297@gmail.com </a> </p>
