--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -864,7 +864,7 @@
         <li class="name"> Shama.Dev </li>
         <li class="nav-1" > <a href="#homee">Home </a> </li>
         <li class="nav-1" > <a href="#aboutme">About me</a>  </li>
-        <li class="nav-1" > <a href="#projects">Projects</a>  </li>
+        <li class="nav-1" > <a href="#project">Projects</a>  </li>
         <li class="btn-nav" > <a href="#contact">Contact</a>  </li>
 
 
