--- a/My-portfolio.html
+++ b/My-portfolio.html
@@ -83,6 +83,17 @@
       background-color: rgb(45, 207, 196);
       /* text-decoration: underline; */
     }
+
+    
+    li a {
+      color: azure;
+    }
+
+    li a:hover {
+      text-decoration: underline;
+      color: rgb(45, 207, 196);
+    }
+
     
     .btn-nav {
       border: 2px azure solid;
@@ -98,15 +109,6 @@
       color: white;
       background-color: rgb(151, 20, 20);
       /* text-decoration: underline; */
-    }
-
-    li a {
-      color: azure;
-    }
-
-    li a:hover {
-      text-decoration: underline;
-      color: rgb(45, 207, 196);
     }
 
     .nav-bar {
@@ -865,7 +867,7 @@
         <li class="nav-1" > <a href="#homee">Home </a> </li>
         <li class="nav-1" > <a href="#aboutme">About me</a>  </li>
         <li class="nav-1" > <a href="#project">Projects</a>  </li>
-        <li class="btn-nav" > <a href="#contact">Contact</a>  </li>
+        <li  > <a href="#contact" class="btn-nav">Contact</a>  </li>
 
 
 
